--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "^2.6.0",
+    "node-altcoin": "^0.1.2",
     "big-integer": "^1.6.26",
     "bignumber.js": "^4.1.0",
     "bitcoin-node-api": "0.1.0",
